# dungeon-machine

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: example.py  example2.py  game_state_check.py  gm_loop_example.py  main.py
backend/app/api/: dice.py  session.py
backend/app/api/connection/: __init__.py  connection.py  manager.py
backend/app/api/models/: connection.py  game.py
backend/app/connection/: __init__.py  connection.py  manager.py  message.py  models.py
backend/app/genai/: models.py  provider.py
backend/app/genai/events/: event_tools.py
backend/app/logger/: config.py
backend/app/logic/brain/: __init__.py  brain.py  dtos.py  game_master_brain.py  gm_brain_impl.py  player_action_outcome.py
backend/app/logic/character/: __init__.py  character.py  dice_config.py  inventory.py  item.py  stat.py  status.py
backend/app/logic/dice/: __init__.py  dice.py  dice_config.py  type.py
backend/app/logic/game/: __init__.py  action.py  character.py  characters.py  event.py  game.py  game_event.py  game_master.py  game_master_dtos.py  gamemaster.py  handlers.py  player.py  player_action.py  player_input.py  scene.py  sequence.py  session.py  state.py  turn.py
backend/app/logic/gameflow/: game_state.py
backend/app/logic/modelmanager/: __init__.py  context.py  model_manager.py
backend/app/logic/player/: __init__.py
backend/app/logic/utils/: value.py
backend/app/models/: character.py  connection.py  dice.py  event.py  game.py
backend/app/rag/: loaders.py  splitters.py  vector_store.py
backend/app/services/: character_generation_service.py  game.py
backend/app/services/dice/: dice.py
backend/app/services/game/: __init__.py  error.py  game.py
backend/logic/character/: inventory.py  item.py
backend/models/: character.py
backend/tests/: conftest.py  test_main.py
backend/tests/logic/brain/: test_brain.py  test_game_master_brain.py
backend/tests/logic/game/: test_game_master.py  (+2 more)
backend/tests/rag/: test_rag_ingest_retrieve.py
(+79 files in other folders)
