[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.13",
    "langchain-openai>=1.1.10",
    "pydantic>=2.12.5",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langchain-pymupdf4llm>=0.5.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
[tool.pytest.ini_options]
pythonpath = [".", "app"]
